<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DaftarFilm3"
    android:background="@color/hitambaru">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="166dp"
                    android:layout_height="314dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="31dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    android:backgroundTint="@android:color/white"
                    android:background="@android:color/white"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="287dp"
                        android:layout_gravity="top">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_tenet22"
                            android:background="@drawable/tenet22" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/hitamfilm"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_tenetreview"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="14sp"
                            android:text="@string/tenet"
                            android:textStyle="bold"
                            android:textColor="#FFFCFC"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_marginLeft="1sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="8sp"
                            android:text="@string/_97_min"
                            android:textStyle="bold"
                            android:textColor="#565665"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="166dp"
                    android:layout_height="314dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    android:backgroundTint="@android:color/white"
                    android:background="@android:color/white"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="287dp"
                        android:layout_gravity="top">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_enola2"
                            android:background="@drawable/imperfect" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/hitamfilm"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_enolareview"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="14sp"
                            android:text="@string/imperfect"
                            android:textStyle="bold"
                            android:textColor="#FFFCFC"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_marginLeft="1sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="8sp"
                            android:text="@string/_113_min"
                            android:textStyle="bold"
                            android:textColor="#565665"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="166dp"
                    android:layout_height="314dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="31dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    android:backgroundTint="@android:color/white"
                    android:background="@android:color/white"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="287dp"
                        android:layout_gravity="top">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_enola2"
                            android:background="@drawable/mulan2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/hitamfilm"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mulanreview"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="14sp"
                            android:text="@string/mulan"
                            android:textStyle="bold"
                            android:textColor="#FFFCFC"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_marginLeft="1sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="8sp"
                            android:text="@string/_120_min"
                            android:textStyle="bold"
                            android:textColor="#565665"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="166dp"
                    android:layout_height="314dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    android:backgroundTint="@android:color/white"
                    android:background="@android:color/white"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="287dp"
                        android:layout_gravity="top">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_tenet22"
                            android:background="@drawable/joker" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/hitamfilm"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_enolareview"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="14sp"
                            android:text="@string/joker"
                            android:textStyle="bold"
                            android:textColor="#FFFCFC"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_marginLeft="1sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="8sp"
                            android:text="122 Min"
                            android:textStyle="bold"
                            android:textColor="#565665"
                            android:textAppearance="?attr/textAppearanceBody2" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>